refactor: use brevo for mail service

--- a/server/Backend/appsettings.json
+++ b/server/Backend/appsettings.json
@@ -28,7 +28,7 @@
     "Port": 5672,
     "VirtualHost": ""
   },
-  "SendGrid": {
+  "Brevo": {
     "ApiKey": "",
     "SenderEmail": "",
     "SenderName": ""
